--- a/package.json
+++ b/package.json
@@ -6,10 +6,6 @@
   "license": null,
   "main": "./dist/electron/main.js",
   "scripts": {
-    "build:darwin": "cross-env BUILD_TARGET=darwin node .electron-vue/build.js",
-    "build:linux": "cross-env BUILD_TARGET=linux node .electron-vue/build.js",
-    "build:mas": "cross-env BUILD_TARGET=mas node .electron-vue/build.js",
-    "build:win32": "cross-env BUILD_TARGET=win32 node .electron-vue/build.js",
     "build": "node .electron-vue/build.js && electron-builder",
     "build:dir": "node .electron-vue/build.js && electron-builder --dir",
     "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
@@ -59,10 +55,12 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "4.4.1",
+    "jquery": "3.4.1",
     "markdown-it": "10.0.0",
     "markdown-it-emoji": "1.4.0",
     "markdown-it-highlightjs": "3.0.0",
     "markdown-it-vue": "1.0.11",
+    "popper.js": "1.16.0",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
