--- a/package.json
+++ b/package.json
@@ -79,9 +79,9 @@
     "babel-register": "^6.26.0",
     "cfonts": "^2.1.2",
     "chalk": "^2.4.1",
-    "copy-webpack-plugin": "^4.5.1",
+    "copy-webpack-plugin": "^5.1.1",
     "cross-env": "^5.1.6",
-    "css-loader": "^0.28.11",
+    "css-loader": "^3.4.2",
     "del": "^3.0.0",
     "devtron": "^1.4.0",
     "electron": "^2.0.4",
@@ -99,8 +99,8 @@
     "eslint-plugin-standard": "^3.1.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
+    "listr": "^0.14.3",
     "mini-css-extract-plugin": "0.4.0",
-    "multispinner": "^0.2.1",
     "node-loader": "^0.6.0",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
