fix: emailアドレスの修正

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-md-editor-electron",
   "version": "0.1.0",
-  "author": "taka <taka05061@gamil.com>",
+  "author": "taka <tomo05061@gmail.com>",
   "description": "An electron-vue project",
   "license": null,
   "main": "./dist/electron/main.js",
